--- a/src/main/resources/assets/kilukimod/lang/en_us.json
+++ b/src/main/resources/assets/kilukimod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.kilukimod.sapphirearmorhelmet": "Sapphire Helmet",
   "item.kilukimod.sapphireadamantitearmorbody": "Sapphire Adamantite Armor Body",
   "item.kilukimod.adamantiteshovel": "Adamantite Shovel",
+  "item.kilukimod.witcherwand": "The Witcher\u0027s Wand",
   "item.kilukimod.adamantiteaxe": "Adamantite Axe",
   "item.kilukimod.adamantitearmorhelmet": "Adamantite Helmet",
   "item.kilukimod.sapphireadamantitearmorlegs": "Sapphire Adamantite Armor Leggings",
@@ -48,13 +49,13 @@
   "item.kilukimod.thermonite_powder": "Thermonite Powder",
   "item.kilukimod.sapphirearmorbody": "Sapphire Chestplate",
   "item.kilukimod.sapphireadamantiteshovem": "Sapphire Adamantite Shovel",
-  "block.kilukimod.thermioniteblock": "Thermionite Block",
   "entity.kilukimod.golem": "Golem",
   "item.kilukimod.sapphirearmorlegs": "Sapphire Leggings",
   "block.kilukimod.sapphireblock": "Sapphire Block",
   "block.kilukimod.reinforcedstonebricksstairs": "Reinforced Stone Bricks Stairs",
   "block.kilukimod.adamantitebricks": "Adamantite Bricks",
   "item.kilukimod.golemadamantitearmorhelmet": "Golem Adamantite Helm",
+  "block.kilukimod.thermonite_block": "Thermionite Block",
   "item.kilukimod.enhancedthermonitepowder": "Enhanced Thermonite Powder",
   "item.kilukimod.adamantitesapphirearmorboots": "Adamantite Sapphire Boots",
   "item.kilukimod.sapphireadamantitepickaxe": "Sapphire-Adamantite Pickaxe",
