--- a/src/main/resources/assets/kilukimod/lang/fr_fr.json
+++ b/src/main/resources/assets/kilukimod/lang/fr_fr.json
@@ -2,27 +2,28 @@
   "item.kilukimod.sapphirearmorhelmet": "Casque en saphir",
   "item.kilukimod.sapphireadamantitearmorbody": "Plastron en adamantite-saphir",
   "item.kilukimod.adamantiteshovel": "Pelle en adamantite",
+  "item.kilukimod.witcherwand": "The Witcher\u0027s Wand",
   "item.kilukimod.adamantiteaxe": "Hache en adamantite",
   "item.kilukimod.adamantitearmorhelmet": "Casque en adamantite",
   "item.kilukimod.sapphireadamantitearmorlegs": "Jambières en adamantite-saphir",
-  "item.kilukimod.golemarmorboots": "Golem Boots",
+  "item.kilukimod.golemarmorboots": "Bottes de golem",
   "item.kilukimod.sapphireadamantitearmorhelmet": "Casque en adamantite-saphir",
   "item.kilukimod.adamantitearmorbody": "Plastron en adamantite",
   "item.kilukimod.adamantitearmorlegs": "Jambières en adamantite",
-  "block.kilukimod.sapphirebricks": "Sapphire Bricks",
+  "block.kilukimod.sapphirebricks": "Briques en saphir",
   "item.kilukimod.adamantitesword": "Épée en adamantite",
-  "item.kilukimod.golem": "Golem Spawn Egg",
-  "item.kilukimod.adamantitesapphirearmorbody": "Adamantite Sapphire Chainmail",
-  "item.kilukimod.adamantitesapphirearmorlegs": "Adamantite Sapphire Leggings",
+  "item.kilukimod.golem": "Oeuf de Golem",
+  "item.kilukimod.adamantitesapphirearmorbody": "Cotte de maille en adamantite-saphir",
+  "item.kilukimod.adamantitesapphirearmorlegs": "Pantalon de maille en adamantite-saphir",
   "item.kilukimod.sapphireadamantiteaxe": "Hache en adamantite-saphir",
   "item.kilukimod.thermonite_crystal": "Cristal de thermonite",
-  "item.kilukimod.golemsapphirearmorbody": "Golem Sapphire Chestplate",
-  "block.kilukimod.reinforcedstonebrickswall": "Reinforced Stone Bricks Wall",
-  "item.kilukimod.golemarmorhelmet": "Golem Helm",
-  "block.kilukimod.thermonitebricks": "Thermonite Bricks",
+  "item.kilukimod.golemsapphirearmorbody": "Plastron de golem-saphir",
+  "block.kilukimod.reinforcedstonebrickswall": "Mur en briques de pierre renforcée",
+  "item.kilukimod.golemarmorhelmet": "Casque de golem",
+  "block.kilukimod.thermonitebricks": "Briques de thermonite",
   "block.kilukimod.adamantiteore": "Minerai d\u0027adamantite",
-  "item.kilukimod.golemsapphirearmorlegs": "Golem Sapphire Leggings",
-  "item.kilukimod.golemarmorbody": "Golem Chestplate",
+  "item.kilukimod.golemsapphirearmorlegs": "Jambières de golem-saphir",
+  "item.kilukimod.golemarmorbody": "Plastron de golem",
   "block.kilukimod.adamantiteblock": "Bloc d\u0027adamantite",
   "item.kilukimod.adamantitesapphirearmorhelmet": "Adamantite Sapphire Helmet",
   "item.kilukimod.golemarmorlegs": "Golem Leggings",
@@ -48,13 +49,13 @@
   "item.kilukimod.thermonite_powder": "Poudre de thermonite",
   "item.kilukimod.sapphirearmorbody": "Cotte de maille en saphir",
   "item.kilukimod.sapphireadamantiteshovem": "Pelle en adamantite-saphir",
-  "block.kilukimod.thermioniteblock": "Bloc de thermonite",
   "entity.kilukimod.golem": "Golem",
   "item.kilukimod.sapphirearmorlegs": "Pantalon de maille en saphir",
   "block.kilukimod.sapphireblock": "Bloc de saphir",
   "block.kilukimod.reinforcedstonebricksstairs": "Reinforced Stone Bricks Stairs",
   "block.kilukimod.adamantitebricks": "Adamantite Bricks",
   "item.kilukimod.golemadamantitearmorhelmet": "Golem Adamantite Helm",
+  "block.kilukimod.thermonite_block": "Thermionite Block",
   "item.kilukimod.enhancedthermonitepowder": "Poudre de thermonite améliorée",
   "item.kilukimod.adamantitesapphirearmorboots": "Adamantite Sapphire Boots",
   "item.kilukimod.sapphireadamantitepickaxe": "Pioche en adamantite-saphir",
